fix checkboxes not showing state in chrome

--- a/styles/snowball-admin.css
+++ b/styles/snowball-admin.css
@@ -10,6 +10,10 @@ label[for="slugdiv-hide"] {
   display: none;
 }
 
+input[type="checkbox"] {
+  -webkit-appearance: checkbox;
+}
+
 #slugdiv {
   display: none;
 }
